@@ -1,12 +1,13 @@
 [general]
-# Use 0 not to round,
-# 10 to 0.1, 0.2, etc,
-# 4 to 0.25, 0.5, 0.75
-# 2 to 0.5, 1.0
-# 1 to 1.0
+; Use 0 not to round,
+; 10 to 0.1, 0.2, etc,
+; 4 to 0.25, 0.5, 0.75
+; 2 to 0.5, 1.0
+; 1 to 1.0
 round = 0
 [markup]
-# Put the markup as a percentage
-vps = 0
-bm = 0
-gpu = 0
+; Put the markup and currency code, % as a percentage
+; or Do not put the group you do not want to import
+;vps = 0 %
+;bm = 0 USD
+;gpu = 0 RUB
