@@ -1,3 +1,5 @@
+2024-09-03
+    Added the ability to add a fixed markup
 2024-08-29
     Changed group headline
 2024-08-27
